API and network

--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Crypto Chain",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "node index.js",
+    "dev": "npm run redis && nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js",
+    "redis": "redis-server --daemonize yes"
   },
   "repository": {
     "type": "git",
@@ -17,9 +21,15 @@
   },
   "homepage": "https://github.com/flake/crypto-chain#readme",
   "devDependencies": {
-    "jest": "^27.0.6"
+    "cross-env": "^7.0.3",
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "hex-to-binary": "^1.0.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "hex-to-binary": "^1.0.1",
+    "redis": "^3.1.2",
+    "request": "^2.88.2"
   }
 }
